@@ -1,14 +1,6 @@
-from .primitives import *
-from .calc import *
-from .colls import *
-from .decorators import *
-from .funcolls import *
-from .funcs import *
-from .seqs import *
-from .types import *
-from .strings import *
-from .flow import *
-from .objects import *
-from .namespaces import namespace
-from .debug import *
-from .primitives import *
+import sys
+
+if sys.version_info[0] == 2:
+    from .py2 import *
+else:
+    from .py3 import *
