@@ -1,3 +1,4 @@
+- added experimental python 3 support
 - published idistinct(), isplit(), isplit_at(), isplit_by()
 
 0.8
